[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://Einstellungen/Schnittlinie/SchnittlinieInput.gd" type="Script" id=2]
[ext_resource path="res://Einstellungen/Schnittlinie/Zeichenflaeche.gd" type="Script" id=3]

[node name="SchnittlinieInput" type="Button"]
theme = ExtResource( 1 )
text = "?"
script = ExtResource( 2 )

[node name="PopupPanel" type="PopupPanel" parent="."]
editor/display_folded = true
margin_right = 1274.0
margin_bottom = 800.0
size_flags_horizontal = 0

[node name="PanelContainer" type="HBoxContainer" parent="PopupPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1270.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 2

[node name="Container" type="VBoxContainer" parent="PopupPanel/PanelContainer"]
margin_left = 1058.0
margin_right = 1266.0
margin_bottom = 792.0
size_flags_horizontal = 0

[node name="WinkelContainer" type="VBoxContainer" parent="PopupPanel/PanelContainer/Container"]
editor/display_folded = true
margin_right = 208.0
margin_bottom = 82.0

[node name="Versatz" type="HBoxContainer" parent="PopupPanel/PanelContainer/Container/WinkelContainer"]
margin_right = 208.0
margin_bottom = 39.0
alignment = 1

[node name="VersatzValue" type="Label" parent="PopupPanel/PanelContainer/Container/WinkelContainer/Versatz"]
margin_left = 72.0
margin_right = 135.0
margin_bottom = 39.0
text = "000"
align = 2

[node name="VWinkel" type="HBoxContainer" parent="PopupPanel/PanelContainer/Container/WinkelContainer"]
margin_top = 43.0
margin_right = 208.0
margin_bottom = 82.0
alignment = 1

[node name="WinkelValue" type="Label" parent="PopupPanel/PanelContainer/Container/WinkelContainer/VWinkel"]
margin_left = 57.0
margin_right = 130.0
margin_bottom = 39.0
text = "00.0"

[node name="WinkelEinheit" type="Label" parent="PopupPanel/PanelContainer/Container/WinkelContainer/VWinkel"]
margin_left = 134.0
margin_right = 151.0
margin_bottom = 39.0
text = "Â°"

[node name="SchnittpunktContainer" type="PanelContainer" parent="PopupPanel/PanelContainer/Container"]
margin_top = 86.0
margin_right = 208.0
margin_bottom = 390.0

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 201.0
margin_bottom = 297.0

[node name="GratKehleButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer"]
margin_right = 194.0
margin_bottom = 45.0
text = "Unten"

[node name="ObenUntenButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 194.0
margin_bottom = 94.0
text = "Unten"

[node name="NavigationContainer" type="GridContainer" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 98.0
margin_right = 194.0
margin_bottom = 290.0
columns = 2

[node name="NachLinksButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer"]
margin_right = 87.0
margin_bottom = 45.0
text = "|<--"
align = 0

[node name="NachRechtsButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer"]
margin_left = 91.0
margin_right = 194.0
margin_bottom = 45.0
text = "-->|"
align = 2

[node name="MinusHundertButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer"]
margin_top = 49.0
margin_right = 87.0
margin_bottom = 94.0
text = "-100"
align = 0

[node name="PlusHundertButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer"]
margin_left = 91.0
margin_top = 49.0
margin_right = 194.0
margin_bottom = 94.0
text = "+100"
align = 2

[node name="MinusZehnButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer"]
margin_top = 98.0
margin_right = 87.0
margin_bottom = 143.0
text = "-10"
align = 0

[node name="PlusZehnButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer"]
margin_left = 91.0
margin_top = 98.0
margin_right = 194.0
margin_bottom = 143.0
text = "+10"
align = 2

[node name="MinusEinsButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer"]
margin_top = 147.0
margin_right = 87.0
margin_bottom = 192.0
text = "-1"
align = 0

[node name="PlusEinsButton" type="Button" parent="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer"]
margin_left = 91.0
margin_top = 147.0
margin_right = 194.0
margin_bottom = 192.0
text = "+1"
align = 2

[node name="Zeichenflaeche" type="Node2D" parent="PopupPanel"]
position = Vector2( 5.50207, 6.00274 )
script = ExtResource( 3 )
[connection signal="pressed" from="." to="." method="_on_SchnittlinieInput_pressed"]
[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/GratKehleButton" to="." method="_on_GratKehleButton_pressed"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/ObenUntenButton" to="." method="_on_ObenUntenButton_pressed"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer/NachLinksButton" to="." method="_on_NachLinksButton_pressed"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer/NachRechtsButton" to="." method="_on_NachRechtsButton_pressed"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer/MinusHundertButton" to="." method="_on_MinusHundertButton_pressed"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer/PlusHundertButton" to="." method="_on_PlusHundertButton_pressed"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer/MinusZehnButton" to="." method="_on_MinusZehnButton_pressed"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer/PlusZehnButton" to="." method="_on_PlusZehnButton_pressed"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer/MinusEinsButton" to="." method="_on_MinusEinsButton_pressed"]
[connection signal="pressed" from="PopupPanel/PanelContainer/Container/SchnittpunktContainer/VBoxContainer/NavigationContainer/PlusEinsButton" to="." method="_on_PlusEinsButton_pressed"]
